# janus-adk

./: .env.template  .gitignore  README.md  additional_tests_output.txt  main_demo_output.txt  pyproject.toml  requirements.txt
docs/: 00_overview.md  01_janus_agent.md  01_janus_agent_.md  02_policy_decision_point__pdp__.md  02_policy_decision_point_pdp.md  03_policy_repository.md  03_policy_repository_.md  04_gemini_client.md  04_gemini_client_.md  05_adk_adapter__agent___orchestrator__.md  05_adk_adapter_agent_orchestrator.md  06_demo_analysis_.md  overview.md
examples/adk_demo/: additional_tests.py  gemini_demo.py  main_demo.py
janus_agent/: agent.py
janus_agent/adapters/: adk_adapter.py
janus_agent/core/: pdp.py  policy_repository.py
janus_agent/integrations/: gemini_client.py
policies/examples/: agent-payment-processor.yaml  domain-finance.yaml  enterprise-security.yaml
