[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "janus-policy-manager"
version = "0.1.0"
description = "Janus ADK + Gemini integration framework"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sumitro Palit", email = "sumitro.palit@gmail.com" }
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
